# graph-visualisation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: graph.cpp  graph.h  graph_dialog.cpp  graph_dialog.h  input.cpp  input.h
